--- a/styles/home.css
+++ b/styles/home.css
@@ -4,11 +4,13 @@
   box-sizing: border-box;
   list-style: none;
   scroll-behavior: smooth;
+  text-decoration: none;
 }
 
 body {
   font-family: "Poppins", sans-serif;
   color: rgb(85, 85, 85);
+  background-color: #f5f5dc;
 }
 
 header {
@@ -21,10 +23,10 @@ header {
 }
 
 .logo {
+  color: darkolivegreen;
   display: flex;
+  gap: 0.5rem;
   align-items: center;
-  font-size: 2rem;
-  font-weight: 700;
 }
 
 .logo :hover {
@@ -33,21 +35,56 @@ header {
 
 .nav-links {
   display: flex;
-  margin-left: 150px;
+  margin-left: 110px;
   gap: 3rem;
-  font-size: 1.5 rem;
+  font-size: 2 rem;
   font-weight: 400;
 }
 
-a {
-  text-decoration: none;
-  color: black;
+.nav-links a {
+  color: rgb(85, 85, 85);
 }
 
-a:hover {
+.nav-links a:hover {
   color: grey;
+  text-decoration: underline;
 }
 
-a {
+a{
   transition: all 500ms ease;
+}
+
+#menu-icon {
+  height: 25px;
+  width: 30px;
+  cursor: pointer;
+  color: rgb(85, 85, 85);
+}
+
+h1 span {
+  font-size: larger;
+  font-weight: 900;
+  color: olivedrab;
+}
+
+h5 a {
+  color: rgb(85, 85, 85);
+  cursor: pointer;
+  font-weight: 400;
+}
+
+.profile-image {
+  width: 400px;
+  height: auto;
+  padding: 30px;
+}
+
+.profile {
+  width: 100%;
+  height: 100vh;
+  padding: 50px 25% 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 47px;
 }
