--- a/styles/home.css
+++ b/styles/home.css
@@ -11,6 +11,8 @@ body {
   font-family: "Poppins", sans-serif;
   color: rgb(85, 85, 85);
   background-color: #f5f5dc;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 header {
@@ -21,7 +23,7 @@ header {
   align-items: center;
   justify-content: space-around;
   z-index: 1000;
-  transition: top 0.3s; 
+  transition: top 0.3s;
 }
 
 .logo {
@@ -37,14 +39,13 @@ header {
 
 .nav-links {
   display: flex;
-  margin-left: 110px;
   gap: 2rem;
-  font-size: 2 rem;
   font-weight: 400;
 }
 
 .nav-links a {
   color: rgb(85, 85, 85);
+  margin-inline: 7%;
 }
 
 .nav-links a:hover {
@@ -60,12 +61,12 @@ a {
   transition: all 500ms ease;
 }
 
-#menu-icon {
+/* #menu-icon {
   height: 25px;
   width: 30px;
   cursor: pointer;
   color: rgb(85, 85, 85);
-}
+} */
 
 h1 span {
   font-size: larger;
@@ -79,11 +80,18 @@ h5 a {
   font-weight: 400;
 }
 
-.profile-image {
-  width: 320px;
-  height: auto;
+.profile-image{
+  max-width: 320px;
+  max-height: 450px;
   margin-right: 30px;
 }
+
+.profile-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 20px;
+}
+
 
 .profile {
   width: 150%;
@@ -99,3 +107,75 @@ h5 a {
   flex-direction: column;
   gap: 5px;
 }
+
+ .hobby-content {
+  padding:120px 15% 80px;
+  width: 150%;
+  max-width: 100%;
+} 
+
+.hobbies-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.hobbies-list div{
+  margin: 25px;
+}
+
+.section h3 {
+  font-weight: 600;
+  color: #4e827c;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  justify-self: center;
+}
+
+.hobby {
+  background-color: #eae6da;
+  padding:20px;
+  border-radius: 20px;
+}
+
+.hobby h4 {
+  color: darkolivegreen;
+  font-size: 1.1rem;
+  font-weight: 500;
+  padding-left: 2%;
+}
+
+.favorite {
+  padding-block: 20px;
+  display: flex;
+  align-items: center;
+  font-style: italic;
+  color:#84a295;
+}
+
+p {
+  margin: 5%;
+  font-weight: 450;
+  padding-inline:10px;
+  padding-block: 3px;
+  border-radius: 7px;
+  border: #efdb96;
+  border-style: solid;
+  border:5px dashed #efdb96 ;
+  
+}
+
+.hobby ul {
+  list-style-type: square;
+  padding-left: 15%;
+  padding-block: 10px;
+  font-weight: 200;
+  display: flex;
+  flex-direction: column;
+  color:#84a295;
+}
+
+
+li {
+  margin-bottom: 8px; 
+} 
