--- a/styles/home.css
+++ b/styles/home.css
@@ -39,13 +39,13 @@ header {
 
 .nav-links {
   display: flex;
-  gap: 2rem;
+  gap: 6rem;
   font-weight: 400;
 }
 
 .nav-links a {
   color: rgb(85, 85, 85);
-  margin-inline: 7%;
+  margin-inline: 15px;
 }
 
 .nav-links a:hover {
@@ -79,7 +79,7 @@ h5 a {
   margin-right: 30px;
 }
 
-.profile-image img {
+.profile-image img, .project-image img {
   max-width: 100%;
   height: auto;
   border-radius: 20px;
@@ -91,6 +91,7 @@ h5 a {
   padding: 70px 20% 80px;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 55px;
   margin-left: 10%;
 }
@@ -102,7 +103,8 @@ h5 a {
 }
 
 #hobbies,
-#contacts {
+#contacts,
+#projects {
   padding: 120px 15% 80px;
   width: 150%;
   max-width: 100%;
@@ -118,23 +120,24 @@ h5 a {
 }
 
 .hobbies-title,
-.contact-title {
+.contacts-title,
+.projects-title {
   font-weight: 600;
   color: olivedrab;
-  margin-bottom: 10px;
+  margin-block: 10px;
   text-align: center;
   font-size: 1.5rem;
   justify-self: center;
 }
 
 .hobby,
-.contact-container {
+.contact-container, .project{
   background-color: #eae6da;
   padding: 20px;
   border-radius: 20px;
 }
 
-.hobby h4 {
+.hobby h4{
   color: darkolivegreen;
   font-size: 1.1rem;
   font-weight: 500;
@@ -188,8 +191,45 @@ h5 a {
   text-align: center;
 }
 
-.contact-name a {
+.contact-name a, .github-repo a{
   color: #84a295;
   font-weight: 600;
-  padding-top: 10%;
 }
+
+.projects-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.project{
+  margin-block: 30px;
+}
+
+
+.github-repo a{
+    margin-top: 20px;
+    padding-right: 8px;
+}
+
+.project-image{
+  max-width: 600px;
+  max-height: 700px;
+  margin: 30px;
+}
+
+.project-name {
+  color:darkolivegreen;
+  font-weight: 500;
+  padding-block:5px
+}
+
+
+
+
+
+
+
+
